allow third-part library in your trigger classes